--- a/calc.html
+++ b/calc.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-   <title>Quigkin's Calc</title>
+   <title>Quigkin Calc</title>
 
 <script language=javascript type="text/javascript">
 
